Added urgency flow

--- a/app/views/nov24-ur-r3/complete-your-autumn-school-census-return.html
+++ b/app/views/nov24-ur-r3/complete-your-autumn-school-census-return.html
@@ -146,7 +146,7 @@
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="complete-your-autumn-school-census-return">Complete your autumn school census return</a></th>
+          <td class="govuk-table__cell"><a href="complete-your-autumn-school-census-return">Complete your autumn school census return</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -155,7 +155,7 @@
           <td class="govuk-table__cell"><a href="complete-your-autumn-school-census-return">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Check the school census guidance for any changes</a></th>
+          <td class="govuk-table__cell"><a href="">Check the school census guidance for any changes</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
@@ -164,7 +164,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Amend your autumn school census date, if needed</a></th>
+          <td class="govuk-table__cell"><a href="">Amend your autumn school census date, if needed</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -173,7 +173,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Complete your spring school census return</a></th>
+          <td class="govuk-table__cell"><a href="">Complete your spring school census return</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -182,7 +182,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Amend your spring school census date, if needed</a></th>
+          <td class="govuk-table__cell"><a href="">Amend your spring school census date, if needed</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -191,7 +191,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Complete your summer school census return</a></th>
+          <td class="govuk-table__cell"><a href="">Complete your summer school census return</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -200,7 +200,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Amend your summer school census data, if needed</a></th>
+          <td class="govuk-table__cell"><a href="">Amend your summer school census data, if needed</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
@@ -212,7 +212,8 @@
     </table>
 
     {{ govukButton({
-      text: "Add new task"
+      text: "Add new task",
+      href: "create-subtask/subtask-details"
     }) }}
 
 {% endblock %}
