--- a/app/views/nov24-ur-r3/create-subtask/add-insight-tags.html
+++ b/app/views/nov24-ur-r3/create-subtask/add-insight-tags.html
@@ -10,7 +10,7 @@
 <div class="govuk-grid-row"> 
   <div class="govuk-grid-column-two-thirds">  
 
-    <h1 class="govuk-heading-l">Add insight tags</h1>
+    <h1 class="govuk-heading-l">Add activity and purpose</h1>
 
     <form class="form" action="add-audience-tags" method="post">
 
