--- a/app/views/nov24-ur-r3/homepage.html
+++ b/app/views/nov24-ur-r3/homepage.html
@@ -33,7 +33,7 @@
             "altText": "Sample Image",
             "headingLevel": "3",
             "linkCard": true,
-            "link": "services",
+            "link": "teams",
             "openInNewTab": false,
             "heading": "Manage your team",
             "description": "Check your team details and make any changes.",
