--- a/app/views/nov24-ur-r3/publish-and-review-details.html
+++ b/app/views/nov24-ur-r3/publish-and-review-details.html
@@ -52,7 +52,10 @@
     }
   },
   items: [
-    {
+  {
+    classes: "govuk-input--width-2",
+    name: "day"
+  },{
       classes: "govuk-input--width-2",
       name: "month"
     },
