--- a/app/views/nov24-ur-r3/school-census.html
+++ b/app/views/nov24-ur-r3/school-census.html
@@ -63,7 +63,7 @@
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="complete-your-autumn-school-census-return">Complete your autumn school census return</a></th>
+          <td class="govuk-table__cell"><a href="complete-your-autumn-school-census-return">Complete your autumn school census return</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -72,25 +72,16 @@
           <td class="govuk-table__cell"><a href="complete-your-autumn-school-census-return">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Check the school census guidance for any changes</a></th>
+          <td class="govuk-table__cell"><a href="">Check the school census guidance for any changes</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
-          <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">
-            Draft
+          <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--pink">
+            In review
           </strong></td>
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Amend your autumn school census date, if needed</a></th>
-          <td class="govuk-table__cell">4 Oct 2024</td>
-          <td class="govuk-table__cell">20 Nov 2024</td>
-          <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
-            Published
-          </strong></td>
-          <td class="govuk-table__cell"><a href="">Edit task</a></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Complete your spring school census return</a></th>
+          <td class="govuk-table__cell"><a href="">Amend your autumn school census date, if needed</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -99,7 +90,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Amend your spring school census date, if needed</a></th>
+          <td class="govuk-table__cell"><a href="">Complete your spring school census return</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -108,7 +99,7 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Complete your summer school census return</a></th>
+          <td class="govuk-table__cell"><a href="">Amend your spring school census date, if needed</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
@@ -117,7 +108,16 @@
           <td class="govuk-table__cell"><a href="">Edit task</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header"><a href="">Amend your summer school census data, if needed</a></th>
+          <td class="govuk-table__cell"><a href="">Complete your summer school census return</a></th>
+          <td class="govuk-table__cell">4 Oct 2024</td>
+          <td class="govuk-table__cell">20 Nov 2024</td>
+          <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">
+            Published
+          </strong></td>
+          <td class="govuk-table__cell"><a href="">Edit task</a></td>
+        </tr>
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell"><a href="">Amend your summer school census data, if needed</a></th>
           <td class="govuk-table__cell">4 Oct 2024</td>
           <td class="govuk-table__cell">20 Nov 2024</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
