--- a/app/views/nov24-ur-r3/teams.html
+++ b/app/views/nov24-ur-r3/teams.html
@@ -30,7 +30,7 @@
       rows: [
         [
           {
-            html: '<a href="school-census">	School census</a>'
+            html: '<a href="school-census-team">	School census</a>'
           },
           {
             html: ' <strong class="govuk-tag govuk-tag--green">
