--- a/app/views/nov24-ur-r3/create-subtask/success.html
+++ b/app/views/nov24-ur-r3/create-subtask/success.html
@@ -28,8 +28,8 @@
 <li>publish your task </li>
 </ul>
   <p>If you need additional support, you can contact [team email].</p>
-  <p></p>As you have selected this as urgent, we aim to do this as soon as possible.</p>
-  <p></p>We’ll email you to confirm your task is live on DfE Connect or to ask for more information.</p>
+  <p>As you have selected this as urgent, we aim to do this as soon as possible.</p>
+  <p>We'll email you to confirm your task is live on DfE Connect or to ask for more information.</p>
 
   <p><a href="../requests">View your requests</a></p>
 
@@ -52,9 +52,11 @@
 <li>review the details </li>
 <li>publish your task </li>
 </ul>
-<p>If you need additional support, you can contact [team email].</p>
-<p></p>As you have selected this as urgent, we aim to do this as soon as possible.</p>
-<p></p>We’ll email you to confirm your task is live on DfE Connect or to ask for more information.</p>
+<p class="govuk-body">If you need additional support, you can contact [team email].</p>
+
+<p class="govuk-body">As you have selected this as urgent, we aim to do this as soon as possible.</p>
+
+<p class="govuk-body">We'll email you to confirm your task is live on DfE Connect or to ask for more information.</p>
 
 <p><a href="../requests">View your requests</a></p>
 {% endif %}
