--- a/app/views/nov24-ur-r3/requests.html
+++ b/app/views/nov24-ur-r3/requests.html
@@ -21,7 +21,7 @@
       classes: "govuk-table--small-text-until-tablet",
       head: [
         {
-          text: "Title"
+          text: "Task name"
         },
         {
           text: "Type"
@@ -58,7 +58,7 @@
     <table class="govuk-table">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header govuk-!-width-one-half">Title</th>
+          <th scope="col" class="govuk-table__header govuk-!-width-one-half">Task name</th>
           <th scope="col" class="govuk-table__header">Type</th>
           <th scope="col" class="govuk-table__header">Requested by</th>
           <th scope="col" class="govuk-table__header">Requested on</th>
