--- a/app/views/nov24-ur-r3/create-subtask/subtask-details-2.html
+++ b/app/views/nov24-ur-r3/create-subtask/subtask-details-2.html
@@ -10,7 +10,7 @@
 <div class="govuk-grid-row"> 
   <div class="govuk-grid-column-two-thirds">  
 
-    <h1 class="govuk-heading-l">Task details</h1>
+    <h1 class="govuk-heading-l">Add task requirements</h1>
 
     <form class="form" action="add-insight-tags" method="post">
 
