--- a/app/views/nov24-ur-r3/requests.html
+++ b/app/views/nov24-ur-r3/requests.html
@@ -110,7 +110,7 @@
       classes: "govuk-table--small-text-until-tablet",
       head: [
         {
-          text: "Title"
+          text: "Task name"
         },
         {
           text: "Type"
